{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 32,
  "lineage": "59b74e0a-e2d9-e48b-6d07-88bd999fab23",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "task_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "task-elb-access-log-bucket",
                "enabled": true,
                "prefix": "task/access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:759907441676:loadbalancer/app/task-loadbalancer/609bdf60b0f69932",
            "arn_suffix": "app/task-loadbalancer/609bdf60b0f69932",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-loadbalancer-451015606.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:759907441676:loadbalancer/app/task-loadbalancer/609bdf60b0f69932",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f51f3ccdafebc298"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007ec8f04ea529377"
              },
              {
                "subnet_id": "subnet-0f9b783b7ab4ee394"
              }
            ],
            "subnets": [
              "subnet-007ec8f04ea529377",
              "subnet-0f9b783b7ab4ee394"
            ],
            "vpc_id": "vpc-096dc46dee1936033",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_subnet.public_subnetB",
            "module.network.aws_vpc.task_vpc",
            "module.s3.aws_s3_bucket.task_logs_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "task_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:759907441676:listener/app/task-loadbalancer/609bdf60b0f69932/7fda4f212ca9576e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:759907441676:targetgroup/task-target-group/eb9054159555d318",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:759907441676:listener/app/task-loadbalancer/609bdf60b0f69932/7fda4f212ca9576e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:759907441676:loadbalancer/app/task-loadbalancer/609bdf60b0f69932",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_lb.task_LB",
            "module.instances.aws_lb_target_group.task_target_group",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_subnet.public_subnetB",
            "module.network.aws_vpc.task_vpc",
            "module.s3.aws_s3_bucket.task_logs_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:759907441676:targetgroup/task-target-group/eb9054159555d318",
            "arn_suffix": "targetgroup/task-target-group/eb9054159555d318",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:759907441676:targetgroup/task-target-group/eb9054159555d318",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:759907441676:loadbalancer/app/task-loadbalancer/609bdf60b0f69932"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task-target-group",
            "port": 8085,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c9e2d7539e02405",
            "arn": "arn:aws:ec2:us-east-1:759907441676:elastic-ip/eipalloc-07c9e2d7539e02405",
            "association_id": "eipassoc-0f62174319c870668",
            "domain": "vpc",
            "id": "eipalloc-07c9e2d7539e02405",
            "network_border_group": "us-east-1",
            "network_interface": "eni-070c17cd1a01fc948",
            "private_dns": "ip-10-0-3-99.ec2.internal",
            "private_ip": "10.0.3.99",
            "public_dns": "ec2-34-224-187-207.compute-1.amazonaws.com",
            "public_ip": "34.224.187.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "task-eip"
            },
            "tags_all": {
              "Name": "task-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:internet-gateway/igw-00ac70096a57f6d27",
            "id": "igw-00ac70096a57f6d27",
            "owner_id": "759907441676",
            "tags": {
              "Name": "task-igw"
            },
            "tags_all": {
              "Name": "task-igw"
            },
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c9e2d7539e02405",
            "association_id": "eipassoc-0f62174319c870668",
            "connectivity_type": "public",
            "id": "nat-02a542d566a19dcd1",
            "network_interface_id": "eni-070c17cd1a01fc948",
            "private_ip": "10.0.3.99",
            "public_ip": "34.224.187.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-007ec8f04ea529377",
            "tags": {
              "Name": "task-nat"
            },
            "tags_all": {
              "Name": "task-nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:route-table/rtb-0b544520f038c99b2",
            "id": "rtb-0b544520f038c99b2",
            "owner_id": "759907441676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a542d566a19dcd1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-private-RT"
            },
            "tags_all": {
              "Name": "task-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:route-table/rtb-0847917436999fd96",
            "id": "rtb-0847917436999fd96",
            "owner_id": "759907441676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ac70096a57f6d27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-public-RT"
            },
            "tags_all": {
              "Name": "task-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_RT_associationA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0738311a86d023687",
            "route_table_id": "rtb-0b544520f038c99b2",
            "subnet_id": "subnet-0a52641b9846d0ade"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_RT",
            "module.network.aws_subnet.private_subnetA",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_RT_associationB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db73c51d9dd9cd3",
            "route_table_id": "rtb-0b544520f038c99b2",
            "subnet_id": "subnet-0b05e9c0fb862d3c3"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_RT",
            "module.network.aws_subnet.private_subnetB",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_RT_associationA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8792777decdfd9",
            "route_table_id": "rtb-0847917436999fd96",
            "subnet_id": "subnet-007ec8f04ea529377"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_RT",
            "module.network.aws_subnet.public_subnetA",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_RT_associationB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078a1e47856934500",
            "route_table_id": "rtb-0847917436999fd96",
            "subnet_id": "subnet-0f9b783b7ab4ee394"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_RT",
            "module.network.aws_subnet.public_subnetB",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:security-group/sg-030a6824998bcb001",
            "description": "Allow traffic from and to Application LoadBalancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f51f3ccdafebc298"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030a6824998bcb001",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress from LoadBalancer",
                "from_port": 8085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f51f3ccdafebc298"
                ],
                "self": false,
                "to_port": 8085
              }
            ],
            "name": "instance_sg",
            "name_prefix": "",
            "owner_id": "759907441676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-instance-sg"
            },
            "tags_all": {
              "Name": "task-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:security-group/sg-0f51f3ccdafebc298",
            "description": "Allow HTTP/HTTPS traffic from the internet to Application Loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f51f3ccdafebc298",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "loadbalancer_sg",
            "name_prefix": "",
            "owner_id": "759907441676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-lb-sg"
            },
            "tags_all": {
              "Name": "task-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:subnet/subnet-0a52641b9846d0ade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a52641b9846d0ade",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759907441676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-private-subnetA"
            },
            "tags_all": {
              "Name": "task-private-subnetA"
            },
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:subnet/subnet-0b05e9c0fb862d3c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b05e9c0fb862d3c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759907441676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-private-subnetB"
            },
            "tags_all": {
              "Name": "task-private-subnetB"
            },
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:subnet/subnet-007ec8f04ea529377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007ec8f04ea529377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759907441676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-public-subnetA"
            },
            "tags_all": {
              "Name": "task-public-subnetA"
            },
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:subnet/subnet-0f9b783b7ab4ee394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9b783b7ab4ee394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759907441676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-public-subnetB"
            },
            "tags_all": {
              "Name": "task-public-subnetB"
            },
            "vpc_id": "vpc-096dc46dee1936033"
          },
          "dependencies": [
            "module.network.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759907441676:vpc/vpc-096dc46dee1936033",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01aa5b63faed16fdc",
            "default_route_table_id": "rtb-0b5ff690892c0ca55",
            "default_security_group_id": "sg-0c5315903a3326e6d",
            "dhcp_options_id": "dopt-02b4e9e9923dd67dc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096dc46dee1936033",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5ff690892c0ca55",
            "owner_id": "759907441676",
            "tags": {
              "Name": "task-vpc"
            },
            "tags_all": {
              "Name": "task-vpc"
            }
          }
        }
      ]
    }
  ]
}